--- a/index_files/default.css
+++ b/index_files/default.css
@@ -1,5 +1,5 @@
 
-body{margin:0;padding:0;background:#ffe;font-size:14px;font-family:'Bradley Hand', cursive;color:#231F20;overflow:auto}
+body{margin:0;padding:0;background:#ffe;font-size:14px;font-family:'Comic Sans MS', 'Comic Sans', cursive;color:#231F20;overflow:auto}
 a {color:#000;font-size:14px;}
 #main{width:100%;}
 #wrap{position:relative;margin:0 auto;width:1100px;height:680px;margin-top:10px;}
